<resources>
    <string name="app_name">DoAn</string>
    <string name="log_in">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_log_in_with_google">Log in with Google</string>
    <string name="login_with_google">Login with Google</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_new_account">Register new account</string>
    <string name="register_title">Register</string>
    <string name="log_in_your_account">Log In your account</string>
    <string name="default_web_client_id">612994072741-70m772tlnvcsogna7o69orsbnsqdp2fe.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="notifications">Add</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="upload_product">Upload Product</string>
    <string name="b_n_ch_n_ng_i_d_ng_n_y">Bạn đã chặn người dùng này</string>
    <string name="ch_n_nh">Chọn ảnh</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn...</string>
    <string name="g_i_tin_nh_n">Gửi tin nhắn</string>
    <string name="title2">Title</string>
    <string name="description2">Description</string>
    <string name="price2">Price</string>
    <string name="save_changes">Save Changes</string>
    <string name="name2">Name</string>
    <string name="phone2">Phone</string>
    <string name="address2">Address</string>
    <string name="email2">Email</string>
    <string name="ch_nh_s_a_s_n_ph_m">Chỉnh sửa sản phẩm</string>
    <string name="l_u">Lưu</string>
    <string name="_0_l_t_xem">0 lượt xem</string>
    <string name="ti_u_s_n_ph_m">Tiêu đề sản phẩm</string>
    <string name="lo_i">Loại:</string>
    <string name="gi">Giá</string>
    <string name="m_t_s_n_ph_m">Mô tả sản phẩm</string>
    <string name="li_n_h_email_example_com">Liên hệ: email@example.com</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="nh_gi_s_n_ph_m">Đánh giá sản phẩm</string>
    <string name="nh_gi_s_n_ph_m2">Đánh giá sản phẩm</string>
    <string name="chuy_n_sang_tr_chuy_n">Chuyển sang trò chuyện</string>
    <string name="s_n_ph_m_ng">Sản phẩm đã đăng</string>
    <string name="a_ch">Địa Chỉ:</string>
    <string name="s_t">SĐT:</string>
    <string name="user_email_com">user@email.com</string>
    <string name="user_name">User Name</string>
    <string name="vi_t_nh_n_x_t_t_y_ch_n">Viết nhận xét (tùy chọn)</string>
    <string name="search_products">Search products</string>
    <string name="min">Min $</string>
    <string name="f">-</string>
    <string name="max">Max $</string>
    <string name="l_c">Lọc</string>
    <string name="user_name3">User Name</string>
    <string name="user_email_com3">user@email.com</string>
    <string name="s_t2">SĐT:</string>
    <string name="a_ch2">Địa Chỉ:</string>
    <string name="s_n_ph_m_ng2">Sản phẩm đã đăng</string>
    <string name="ch_nh_s_a_th_ng_tin2">Chỉnh sửa thông tin</string>
    <string name="th_m_s_n_ph_m">Thêm sản phẩm</string>
    <string name="l_ch_s_thanh_to_n">Lịch sử thanh toán</string>
    <string name="chuy_n_sang_tr_chuy_n2">Chuyển sang trò chuyện</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="x_a_t_i_kho_n">Xóa tài khoản</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>
    <string name="tin_nh_n_cu_i_c_ng">Tin nhắn cuối cùng...</string>
    <string name="nh_tin_nh_n">Ảnh tin nhắn</string>
    <string name="_10_10">10:10</string>
    <string name="nh_tin_nh_n2">Ảnh tin nhắn</string>
    <string name="_10_102">10:10</string>
    <string name="n_i_dung_tin_nh_n">Nội dung tin nhắn</string>
    <string name="_12_34">12:34</string>
    <string name="n_i_dung_tin_nh_n2">Nội dung tin nhắn</string>
    <string name="_12_342">12:34</string>
    <string name="transaction_id_txn123456">Transaction ID: #TXN123456</string>
    <string name="date_01_jul_2025">Date: 01 Jul 2025</string>
    <string name="item_nike_air_zoom_pegasus_40">Item: Nike Air Zoom Pegasus 40</string>
    <string name="amount_119_99">Amount: $119.99</string>
    <string name="status_completed">Status: Completed</string>
    <string name="product_title">Product Title</string>
    <string name="_0">$0</string>
    <string name="t_n_ng_i_nh_gi">Tên người đánh giá</string>
    <string name="n_i_dung_nh_gi">Nội dung đánh giá</string>
    <string name="product_title2">Product Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="product_categories">
        <item>Tất cả</item>
        <item>Game</item>
        <item>GameConsole</item>
    </string-array>

</resources>