<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layout_marginTop="16dp">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email_com"
        android:textSize="14sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_t"
        android:textSize="14sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_ch"
        android:textSize="14sp"
        android:gravity="center" />

    <TextView
        android:text="@string/s_n_ph_m_ng"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_user_products"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chuy_n_sang_tr_chuy_n"
        android:layout_marginTop="8dp" />
</LinearLayout>
