<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:id="@+id/layout_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_eye"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/txt_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_l_t_xem"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ti_u_s_n_ph_m"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lo_i"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_t_s_n_ph_m"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/txt_owner_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/li_n_h_email_example_com"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mua_ngay"
            android:layout_marginBottom="16dp" />
        <Button
            android:id="@+id/btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh_gi_s_n_ph_m"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FF9800"
            android:textColor="@android:color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh_gi_s_n_ph_m2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_reviews"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>
</ScrollView>
