<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_sample_product"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title2"
            android:importantForAutofill="no"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description2"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
