<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Search bar -->
    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:hint="@string/search_products"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:textColorHint="@color/black"
        android:drawableTint="@color/black"
        android:padding="10dp"
        android:background="@drawable/search_background"
        android:inputType="text" />

    <!-- Price filter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/edt_price_min"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="numberDecimal"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="8dp" />

        <EditText
            android:id="@+id/edt_price_max"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/max"
            android:inputType="numberDecimal"
            android:padding="8dp" />
        <Button
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_c" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/product_categories" />
    <!-- Sorting options -->
    <Spinner
        android:id="@+id/spinner_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- Product list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_products"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />
</LinearLayout>
